# deatch

./: .gitignore  README.md  deno.json  package-lock.json  package.json  sign.ps1  tsconfig.json  vite.config.ts
.zed/: settings.json
docs/: frontend-restructure-plan.md
extension/: DEVELOPING.md  LICENSE  README.md  background.js  content.js  manifest.json
scripts/: release.ts
src/: App.css  App.tsx  Sidebar.tsx  auth.ts  broadcaster.ts  chat-events.ts  chat-feed.ts  chat-state.ts  (+17 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth.rs  bridge.rs  browser_host.rs  discord.rs  ipc.rs  keymap.rs  lib.rs  main.rs
src-tauri/src/commands/: discord.rs  keymap.rs  mod.rs  notifications.rs  watch.rs
src-tauri/src/commands/twitch/: auth.rs  channels.rs  chat.rs  clips.rs  eventsub.rs  mod.rs  moderation.rs  raids.rs  search.rs  streams.rs  users.rs
src-tauri/src/dto/: mod.rs  pagination.rs
src-tauri/src/dto/twitch/: channel.rs  chat.rs  clip.rs  eventsub.rs  game.rs  ids.rs  mod.rs  moderation.rs  search.rs  stream.rs  user.rs
src-tauri/src/services/: discord.rs  keymap.rs
src-tauri/src/services/twitch/: auth.rs  channels.rs  chat.rs  clips.rs  mod.rs  moderation.rs  raids.rs  search.rs  streams.rs  users.rs
src-tauri/src/services/twitch/eventsub/: dispatch.rs  mod.rs  runner.rs  subscribe.rs
src-tauri/src/twitch/: auth.rs  channels.rs  chat.rs  eventsub.rs  mod.rs  moderation.rs  response.rs  streams.rs  users.rs  utils.rs
src-tauri/src/twitch/eventsub/: dispatch.rs  mod.rs  runner.rs  subscribe.rs
(+401 files in other folders)
