[package]
name = "deatch"
version = "0.1.0"
description = "Deatch"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "deatch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
twitch_api = { version = "0.7", features = ["helix", "twitch_oauth2", "reqwest", "client", "eventsub"] }
reqwest = { version = "0.12", features = ["json"] }
keyring = "2"
url = "2"
tokio = { version = "1", features = ["net", "io-util", "sync", "macros", "time"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
discord-rich-presence = "0.2"
interprocess = { version = "2", features = ["tokio"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

